# BloxxEngine

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
Assets/: BloxxEngine_Materials.sbs
Assets/.autosave/: BloxxEngine_Materials_4.sbs
BloxxEngine/: CMakeLists.txt
BloxxEngine/include/: BloxxEngine.h  Engine.h
BloxxEngine/include/BloxxEngine/: Camera.h  Engine.h  EntryPoint.h  EventDispatcher.h  File.h  Mesh.h  Renderer.h  Shader.h  Texture.h  TextureAtlas.h
BloxxEngine/include/BloxxEngine/Core/: Log.h
BloxxEngine/include/BloxxEngine/Events/: Event.h  KeyboardEvents.h  MouseEvents.h
BloxxEngine/include/BloxxEngine/Renderer/: RenderCommand.h  Renderer.h
BloxxEngine/include/BloxxEngine/World/: Block.h  BlockRegistry.h  Chunk.h  World.h
BloxxEngine/src/: Camera.cpp  DirWatcher.cpp  DirWatcher.h  Engine.cpp  Engine.h  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp
BloxxEngine/src/Core/: Log.cpp
BloxxEngine/src/Renderer/: RenderCommand.cpp  Renderer.cpp
BloxxEngine/src/World/: Block.cpp  BlockRegistry.cpp  Chunk.cpp  World.cpp
Sandbox/: CMakeLists.txt
Sandbox/Resources/shaders/: block.frag.glsl  block.vert.glsl  minecraft.frag.glsl  single_color.frag
Sandbox/src/: Application.cpp  main.cpp
